added login, register and partial back-end functionality

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,5 +1,5 @@
 <div id="component-name">
-  <h1>Welcome, name!</h1>
+  <h1>Welcome,<span id="usernameSpace"></span>!</h1>
   <p>Please, select an item...</p>
 
 
