--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -7,15 +7,15 @@
     <div class="inputs">
       <form class="signUpForm" (submit)="onSubmit($event)">
         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-          <input class="mdl-textfield__input" id="semail-field" type="text" name="email" required="">
+          <input class="mdl-textfield__input" id="semail-field" type="text" name="email" required>
           <label class="mdl-textfield__label" for="semail-field">E-mail</label>
         </div>
         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-          <input class="mdl-textfield__input" id="susername-field" type="text" name="username" required="">
+          <input class="mdl-textfield__input" id="susername-field" type="text" name="username" required>
           <label class="mdl-textfield__label" for="susername-field">Username</label>
         </div>
         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-          <input class="mdl-textfield__input" id="spassword-field" type="password" name="password" required="">
+          <input class="mdl-textfield__input" id="spassword-field" type="password" name="password" required>
           <label class="mdl-textfield__label" for="spassword-field">Password</label>
         </div>
         <input id="submitButton" type="submit" class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent" value="Register">
