--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,12 +7,14 @@
     <div class="inputs" (submit)="onSubmit($event)">
       <form class="signInForm">
         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-          <input class="mdl-textfield__input" id="email-field" type="text" name="email" required="">
+          <input class="mdl-textfield__input" id="email-field" type="text" name="email" required>
           <label class="mdl-textfield__label" for="email-field">E-mail</label>
+          <span class="mdl-textfield__error" id="emailError">Please fill up the field.</span>
         </div>
         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
           <label class="mdl-textfield__label" for="password-field">Password</label>
-          <input class="mdl-textfield__input" id="password-field" type="password" name="password" required="">
+          <input class="mdl-textfield__input" id="password-field" type="password" name="password" required>
+          <span class="mdl-textfield__error" id="passwordError">Please fill up the field.</span>
         </div>
         <a href="/signup">Sign Up</a>
         <input id="submitButton" class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent" type="submit" value="LogIn">
