--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,5 +1,25 @@
 <div id="component-name">
   <h1>Welcome,<span id="usernameSpace"></span>!</h1>
 
+<div class="titles">
+  <h6>Note</h6>
+  <h6>Todo</h6>
+  <h6>Reminder</h6>
+</div>
 
+<div class="buttons">
+    <button mat-button routerLink="/note">
+     Select
+    </button>
+
+    <button mat-button routerLink="/todo">
+     Select
+    </button>
+  
+    <button mat-button routerLink="/reminder">
+      Select
+    </button>
+  
+
+</div>
 </div>
